# inderes-mcp-agent-system

./: .env.example  .gitignore  AGENT_FRAMEWORK.md  AI_BRIEFING_PROMPT.md  ARCHITECTURE.md  BACKLOG.md  BUILD_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  LESSONS.md  MASTER_PROMPT.md  MULTI_AGENT_ARCHITECTURE.md  PURPOSE.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: ci.yml  refresh-inderes-tokens.yml
.streamlit/: config.toml
docs/: agentic_dev_session_2026-05-10.md  agentic_patterns_mapping_2026-05-11.md  agentic_research_digest_2026-05-11.md  data_sources_analysis_2026-05-10.md  hitl_proposal.md  sprint_lessons_2026-05-09.md  testing_strategy.md
evals/: README.md  findings_2026-05-09.md  findings_2026-05-10.md  golden.yaml  judge.py  judge_selection.md  known-cases.md  known-failure-cases.md  rubric.md  runner.py  sample_queries.sql
evals/results/: .gitignore
examples/: conversation.py  single_question.py
scripts/: build_runs_index.py  diag.py  explain.py  reclassify_paattely.py  refresh_inderes_tokens.py  repro_valuation.py
tests/: conftest.py  test_app_imports.py  test_charts.py  test_evals_yaml.py  test_fabrication_guard.py  test_fallback.py  test_feedback.py  test_footnote_markers.py  test_limits.py  test_oauth_bootstrap.py  test_oauth_runtime.py  test_output_parts.py  test_paattely_parser.py  test_router.py  test_tila_c_banner.py  test_valuation_tool_guard.py  test_workflows.py  test_yahoo_mcp_wiring.py
ui/: DEPLOY.md  DESIGN_BRIEF.md  README.md  app.py  charts.py  components.py  theme.css
(+70 files in other folders)
